add file for tweet added
