# src/database/models/fields.go
@@ -38,7 +38,7 @@ type Comment struct {
 	UserId   int    `json:"user_id,omitempty"`
 	User     *User  `json:"user,omitempty" gorm:"foreignKey:UserId"`
 	Message  string `json:"message,omitempty" gorm:"size:1000;not null"`
-	Files    []File `json:"files,omitempty" gorm:"foreignKey:TweetId"`
+	Files    []File `json:"files,omitempty" gorm:"foreignKey:CommentId"`
 	Likes    []User `json:"likes,omitempty" gorm:"many2many:comment_likes;joinForeignKey:CommentId;JoinRefrences:UserId"`
 	Dislikes []User `json:"dislikes,omitempty" gorm:"many2many:comment_dislikes;joinForeignKey:CommentId;JoinRefrences:UserId"`
 	Enabled  bool   `json:"enabled,omitempty" gorm:"default:true"`
@@ -51,7 +51,7 @@ type File struct {
 	Description string   `gorm:"size:500;type:string;not null"`
 	MimeType    string   `json:"mime_type" gorm:"size:20;type:string;not null"`
 	Tweet       *Tweet   `json:"tweet,omitempty" gorm:"foreignKey:TweetId"`
-	TweetId     int      `json:"tweet_id,omitempty"`
+	TweetId     *int      `json:"tweet_id,omitempty" gorm:"omitempty;null"`
 	Comment     *Comment `json:"comment,omitempty" gorm:"foreignKey:CommentId"`
-	CommentId   int      `json:"comment_id,omitempty"`
+	CommentId   *int      `json:"comment_id,omitempty" gorm:"omitempty;null"`
 }
