# src/routers/file.go
@@ -2,11 +2,12 @@ package routers
 
 import (
 	"twitter/src/handlers"
+	"twitter/src/middlewares"
 
 	"github.com/gin-gonic/gin"
 )
 
 func FileRouter(r *gin.RouterGroup) {
 	h := handlers.NewFileHelper()
-	r.POST("/post", h.Create)
+	r.POST("/post/tweet", middlewares.CheckTweetForAddFile, h.TweetFile)
 }
